--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             Configure <strong>GitHub Pages</strong> for that repository:
             <ul>
               <li>Go to Settings/Pages.</li>
-              <li>In Build and Deployment, select "Deploy from branch".</li>
+              <li>In Build and Deployment, select Branch "main".</li>
             </ul>
           </li>
         </ul>
@@ -284,7 +284,7 @@
         </ul>
       </section>
 
-      <!-- Requirements Section -->
+      <!-- Requisits Section -->
       <section>
         <h2>Requisits:</h2>
         <ul>
@@ -293,7 +293,7 @@
         </ul>
       </section>
 
-      <!-- Workflow Section -->
+      <!-- Flux de Treball Section -->
       <section>
         <h2>Flux de Treball:</h2>
         <p>
@@ -339,8 +339,8 @@
           <li>
             Configura <strong>GitHub Pages</strong> per a aquest repositori:
             <ul>
-              <li>Ves a Settings/Pages.</li>
-              <li>A "Build and Deployment", selecciona "Deploy from branch".</li>
+              <li>Vés a Settings/Pages.</li>
+              <li>En Build and Deployment, selecciona Branch "main".</li>
             </ul>
           </li>
         </ul>
@@ -494,7 +494,7 @@
             Configurad <strong>GitHub Pages</strong> para ese repositorio:
             <ul>
               <li>Id a Settings/Pages.</li>
-              <li>En Build and Deployment, seleccionad "Deploy from branch".</li>
+              <li>En Build and Deployment, seleccionad Branch "main".</li>
             </ul>
           </li>
         </ul>
