--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section>
         <h2>Welcome!</h2>
         <p>
-          Welcome to the <strong>Simulation 1.0</strong>! We’re thrilled to have you here.
+          Welcome to the <strong>Simulathon 1.0</strong>! We’re thrilled to have you here.
           On this page, you’ll find the key information, resources, and guidelines for the event.
           Please read through it carefully to ensure a smooth and productive hacking experience.
         </p>
@@ -235,7 +235,7 @@
       <section>
         <h2>Benvinguts!</h2>
         <p>
-          Benvinguts a la <strong>Simulation 1.0</strong>! Estem encantats de tenir-vos aquí.
+          Benvinguts a la <strong>Simulathon 1.0</strong>! Estem encantats de tenir-vos aquí.
           En aquesta pàgina trobareu la informació clau, els recursos i les directrius per a l'esdeveniment.
           Llegiu-ho amb atenció per assegurar una experiència de hackeig fluida i productiva.
         </p>
@@ -389,7 +389,7 @@
       <section>
         <h2>¡Bienvenidos!</h2>
         <p>
-          ¡Bienvenidos a la <strong>Simulation 1.0</strong>! Estamos encantados de teneros aquí.
+          ¡Bienvenidos a la <strong>Simulathon 1.0</strong>! Estamos encantados de teneros aquí.
           En esta página encontraréis la información clave, los recursos y las directrices para el evento.
           Por favor, leedla detenidamente para asegurar una experiencia de hackeo fluida y productiva.
         </p>
