--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
     header {
       background-color: #343a40;
       color: #fff;
-      padding: 1rem;
-      position: relative;
+      padding: 1rem 0;
     }
-    #language-selector {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
+    #language-selector button {
+      margin-left: 0.5rem;
     }
     .content-container {
       display: none;
@@ -35,9 +32,6 @@
       border-radius: 0.5rem;
       box-shadow: 0 0.25rem 0.5rem rgba(0,0,0,0.1);
       max-width: 800px;
-    }
-    .btn-language {
-      margin-left: 0.5rem;
     }
     h2 {
       border-bottom: 2px solid #e9ecef;
