Updated index with new mail

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section>
         <h2>Welcome!</h2>
         <p>
-          Welcome to the <strong>Simulathon 1.0</strong>! We’re thrilled to have you here.
+          Welcome to the <strong>Simulation 1.0</strong>! We’re thrilled to have you here.
           On this page, you’ll find the key information, resources, and guidelines for the event.
           Please read through it carefully to ensure a smooth and productive hacking experience.
         </p>
@@ -93,6 +93,18 @@
           Instead of writing code directly, the programmer focuses on prompting the AI, testing the output, and refining the code as needed.
         </p>
         <img src="vibe_coding.png" alt="Vibe Coding Image" class="img-fluid my-3 rounded">
+      </section>
+
+      <!-- Project Examples Section -->
+      <section>
+        <h2>Project Examples</h2>
+        <p>
+          Participants will build simple simulation applets that explore systems from different fields of physics, math, ecology, game theory, etc. For example, you might simulate gases in a box, create cool patterns using math, model predator-prey interactions, or simulate basic strategy games. The goal is to make complex ideas easy and fun to see in action.
+        </p>
+        <ul>
+          <li><a href="https://polvilaseca.github.io/applet_gallery/" target="_blank">Gallery of examples</a></li>
+          <li><a href="https://polvilaseca.github.io/simulathon_proposals/" target="_blank">Project proposals</a></li>
+        </ul>
       </section>
 
       <!-- Models to Use Section -->
@@ -138,7 +150,6 @@
           (e.g. the PyScript module allows Python to run on a web browser). Any LLM mentioned above will be able to handle this without any problem.
           For app development, we encourage a <strong>3 phase workflow</strong>.
         </p>
-
         <!-- Planning Sub-Section -->
         <h3>Planning:</h3>
         <ul>
@@ -152,7 +163,6 @@
             </ul>
           </li>
         </ul>
-
         <!-- Development Sub-Section -->
         <h3>Development:</h3>
         <ul>
@@ -171,7 +181,6 @@
           </li>
           <li>Repeat these steps until the applet is considered complete.</li>
         </ul>
-
         <!-- Hosting Sub-Section -->
         <h3>Hosting the applet:</h3>
         <ul>
@@ -208,8 +217,8 @@
         <h2>Deliverables:</h2>
         <p>
           The finalized applets must be sent to
-          <a href="mailto:pol.vilaseca.mainar@gmail.com">pol.vilaseca.mainar@gmail.com</a>
-          before April 28th at 12:00. Each submission must contain:
+          <a href="mailto:simulathon@gmail.com">simulathon@gmail.com</a>
+          before April 27th at 17:00. Each submission must contain:
         </p>
         <ul>
           <li>Applet name,</li>
@@ -229,7 +238,7 @@
       <section>
         <h2>Benvinguts!</h2>
         <p>
-          Benvinguts a la <strong>Simulathon 1.0</strong>! Estem encantats de tenir-vos aquí.
+          Benvinguts a la <strong>Simulation 1.0</strong>! Estem encantats de tenir-vos aquí.
           En aquesta pàgina trobareu la informació clau, els recursos i les directrius per a l'esdeveniment.
           Llegiu-ho amb atenció per assegurar una experiència de hackeig fluida i productiva.
         </p>
@@ -249,6 +258,18 @@
           En comptes d'escriure el codi directament, el programador es centra en donar instruccions a la IA, provar el codi generat i ajustar-lo segons sigui necessari.
         </p>
         <img src="vibe_coding.png" alt="Imatge de Vibe Coding" class="img-fluid my-3 rounded">
+      </section>
+
+      <!-- Project Examples Section in Catalan -->
+      <section>
+        <h2>Exemples de Projectes</h2>
+        <p>
+          Els participants construiran aplicacions de simulació senzilles que exploren sistemes de diferents camps, com ara la física, les matemàtiques, l'ecologia, la teoria dels jocs, etc. Per exemple, podríeu simular gasos en una caixa, crear patrons interessants utilitzant les matemàtiques, modelar interaccions depredador-presa o simular jocs d'estratègia bàsics. L'objectiu és fer que idees complexes siguin fàcils i divertides de veure en acció.
+        </p>
+        <ul>
+          <li><a href="https://polvilaseca.github.io/applet_gallery/" target="_blank">Galeria d'exemples</a></li>
+          <li><a href="https://polvilaseca.github.io/simulathon_proposals/" target="_blank">Propostes de projectes</a></li>
+        </ul>
       </section>
 
       <!-- Models to Use Section -->
@@ -341,7 +362,7 @@
         <p>
           Sigues creatiu! No dubteu a explorar sistemes més enllà de la física tradicional.
           Podeu trobar inspiració en l'ecologia, la teoria dels jocs, l'economia, les matemàtiques, etc.
-          És més fàcil crear sistemes simples amb regles ben definides i fàcilment descrivibles que construir sistemes que impliquin algoritmes físics complicats.
+          És més fàcil crear sistemes simples amb regles ben definides i fàcilment descriptibles que construir sistemes que impliquin algoritmes físics complicats.
         </p>
       </section>
 
@@ -362,8 +383,8 @@
         <h2>Lliuraments:</h2>
         <p>
           Les aplicacions finalitzades s'han d'enviar a
-          <a href="mailto:pol.vilaseca.mainar@gmail.com">pol.vilaseca.mainar@gmail.com</a>
-          abans del 28 d'abril a les 12:00. Cada submissió ha d'incloure:
+          <a href="mailto:simulathon@gmail.com">simulathon@gmail.com</a>
+          abans del 27 d'abril a les 17:00. Cada submissió ha d'incloure:
         </p>
         <ul>
           <li>Nom de l'aplicació,</li>
@@ -383,7 +404,7 @@
       <section>
         <h2>¡Bienvenidos!</h2>
         <p>
-          ¡Bienvenidos a la <strong>Simulathon 1.0</strong>! Estamos encantados de teneros aquí.
+          ¡Bienvenidos a la <strong>Simulation 1.0</strong>! Estamos encantados de teneros aquí.
           En esta página encontraréis la información clave, los recursos y las directrices para el evento.
           Por favor, leedla detenidamente para asegurar una experiencia de hackeo fluida y productiva.
         </p>
@@ -403,6 +424,18 @@
           En lugar de escribir código directamente, el programador se enfoca en dar indicaciones a la IA, probar el resultado y refinar el código según sea necesario.
         </p>
         <img src="vibe_coding.png" alt="Imagen de Vibe Coding" class="img-fluid my-3 rounded">
+      </section>
+
+      <!-- Project Examples Section in Spanish -->
+      <section>
+        <h2>Ejemplos de Proyectos</h2>
+        <p>
+          Los participantes construirán pequeñas applets de simulación que exploran sistemas de diferentes campos, como la física, las matemáticas, la ecología, la teoría de juegos, etc. Por ejemplo, podrías simular gases en una caja, crear patrones geniales usando matemáticas, modelar interacciones depredador-presa o simular juegos de estrategia básicos. El objetivo es hacer que las ideas complejas sean fáciles y divertidas de ver en acción.
+        </p>
+        <ul>
+          <li><a href="https://polvilaseca.github.io/applet_gallery/" target="_blank">Galería de ejemplos</a></li>
+          <li><a href="https://polvilaseca.github.io/simulathon_proposals/" target="_blank">Propuestas de proyectos</a></li>
+        </ul>
       </section>
 
       <!-- Models to Use Section -->
@@ -432,7 +465,7 @@
         </ul>
       </section>
 
-      <!-- Requirements Section -->
+      <!-- Requisitos Section -->
       <section>
         <h2>Requisitos:</h2>
         <ul>
@@ -441,7 +474,7 @@
         </ul>
       </section>
 
-      <!-- Workflow Section -->
+      <!-- Flujo de Trabajo Section -->
       <section>
         <h2>Flujo de Trabajo:</h2>
         <p>
@@ -516,15 +549,15 @@
         <h2>Entregables:</h2>
         <p>
           Las aplicaciones finalizadas deben enviarse a
-          <a href="mailto:pol.vilaseca.mainar@gmail.com">pol.vilaseca.mainar@gmail.com</a>
-          antes del 28 de abril a las 12:00. Cada envío debe incluir:
+          <a href="mailto:simulathon@gmail.com">simulathon@gmail.com</a>
+          antes del 27 de abril a las 17:00. Cada envío debe incluir:
         </p>
         <ul>
           <li>Nombre de la aplicación,</li>
           <li>Nombres de los participantes,</li>
-          <li>Icono de la aplicación,</li>
-          <li>Enlace a la página donde se aloja la aplicación,</li>
-          <li>Enlace al repositorio de GitHub.</li>
+          <li>Icona de la aplicació,</li>
+          <li>Enllaç a la pàgina on l'aplicació està hostejada,</li>
+          <li>Enllaç al repositori de GitHub.</li>
         </ul>
       </section>
     </article>
