--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </p>
         <ul>
           <li><a href="https://polvilaseca.github.io/applet_gallery/" target="_blank">Gallery of examples</a></li>
-          <li><a href="project_proposals.html" target="_blank">Project proposals</a></li>
+          <li><a href="https://polvilaseca.github.io/simulathon_1.0/project_proposals.html" target="_blank">Project proposals</a></li>
         </ul>
       </section>
 
@@ -266,7 +266,7 @@
         </p>
         <ul>
           <li><a href="https://polvilaseca.github.io/applet_gallery/" target="_blank">Galeria d'exemples</a></li>
-          <li><a href="project_proposals.html" target="_blank">Propostes de projectes</a></li>
+          <li><a href="https://polvilaseca.github.io/simulathon_1.0/project_proposals.html" target="_blank">Propostes de projectes</a></li>
         </ul>
       </section>
 
@@ -432,7 +432,7 @@
         </p>
         <ul>
           <li><a href="https://polvilaseca.github.io/applet_gallery/" target="_blank">Galería de ejemplos</a></li>
-          <li><a href="project_proposals.html" target="_blank">Propuestas de proyectos</a></li>
+          <li><a href="https://polvilaseca.github.io/simulathon_1.0/project_proposals.html" target="_blank">Propuestas de proyectos</a></li>
         </ul>
       </section>
 
