--- a/gallery/index.html
+++ b/gallery/index.html
@@ -142,6 +142,22 @@
 
 
 
+      <!-- Card 7 -->
+      <div class="col">
+        <a href="https://roger20ub.github.io/Simulathon-1.0-Refraction/" class="text-decoration-none text-reset">
+          <div class="card h-100 shadow-sm">
+            <img src="./images/ray_tracing.png" class="card-img-top" alt="Ray Tracing with AI">
+            <div class="card-body">
+              <h5 class="card-title">Ray Tracing with AI</h5>
+              <p class="card-text mb-1">Created by Roger Melero & Juan Fernández</p>
+              <a href="https://github.com/roger20ub/Simulathon-1.0-Refraction" class="card-link">GitHub Repo</a>
+            </div>
+          </div>
+        </a>
+      </div>
+
+
+
 
     </main>
 
